--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -4,10 +4,12 @@
 name: Node.js CI
 
 on:
+  pull_request:
+    branches:
+      - master
   push:
     branches:
       - master
-  workflow_dispatch:
 
 jobs:
   build:
