--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -7,9 +7,15 @@ on:
   pull_request:
     branches:
       - master
+    paths:
+      - 'src/**'
+      - '.github/workflows/my-workflow-file.yml'
   push:
     branches:
       - master
+    paths:
+      - 'src/**'
+      - '.github/workflows/my-workflow-file.yml'
 
 jobs:
   build:
